src/test/ui/issues/1-9999/issue-3680.stderr
error[E0308]: mismatched types
  --> $DIR/issue-3680.rs:3:9
   |
LL |     match None {
   |           ---- this expression has type `Option<_>`
LL |         Err(_) => ()
   |         ^^^^^^ expected enum `Option`, found enum `std::result::Result`
   |
   = note: expected enum `Option<_>`
              found enum `std::result::Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
